; ModuleID = '/home/carl/AnghaBench/kphp-kdb/filesys/extr_filesys-xfs-engine.c_compute_binlogpos_filename.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/filesys/extr_filesys-xfs-engine.c_compute_binlogpos_filename.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@work_dir_length = common dso_local global i32 0, align 4
@szBinlogpos = common dso_local global i8* null, align 8
@binlogpos_filename = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [6 x i8] c"%s/%s\00", align 1
@work_dir = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @compute_binlogpos_filename to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @compute_binlogpos_filename() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @work_dir_length, align 4
  %3 = add nsw i32 %2, 1
  %4 = load i8*, i8** @szBinlogpos, align 8
  %5 = call i32 @strlen(i8* %4)
  %6 = add nsw i32 %3, %5
  store i32 %6, i32* %1, align 4
  %7 = load i32, i32* %1, align 4
  %8 = add nsw i32 %7, 1
  %9 = call i32 @zmalloc(i32 %8)
  store i32 %9, i32* @binlogpos_filename, align 4
  %10 = load i32, i32* @binlogpos_filename, align 4
  %11 = load i8*, i8** @work_dir, align 8
  %12 = load i8*, i8** @szBinlogpos, align 8
  %13 = call i32 @sprintf(i32 %10, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i8* %11, i8* %12)
  %14 = load i32, i32* %1, align 4
  %15 = icmp eq i32 %13, %14
  %16 = zext i1 %15 to i32
  %17 = call i32 @assert(i32 %16)
  ret void
}

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @zmalloc(i32) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @sprintf(i32, i8*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
